--- a/Qskit/pulsar.ipynb
+++ b/Qskit/pulsar.ipynb
@@ -10,17 +10,17 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Requirement already satisfied: numpy in /usr/local/lib/python3.11/dist-packages (2.0.2)\n",
-      "Requirement already satisfied: matplotlib in /usr/local/lib/python3.11/dist-packages (3.10.0)\n",
-      "Requirement already satisfied: contourpy>=1.0.1 in /usr/local/lib/python3.11/dist-packages (from matplotlib) (1.3.3)\n",
-      "Requirement already satisfied: cycler>=0.10 in /usr/local/lib/python3.11/dist-packages (from matplotlib) (0.12.1)\n",
-      "Requirement already satisfied: fonttools>=4.22.0 in /usr/local/lib/python3.11/dist-packages (from matplotlib) (4.59.0)\n",
-      "Requirement already satisfied: kiwisolver>=1.3.1 in /usr/local/lib/python3.11/dist-packages (from matplotlib) (1.4.8)\n",
-      "Requirement already satisfied: packaging>=20.0 in /usr/local/lib/python3.11/dist-packages (from matplotlib) (25.0)\n",
-      "Requirement already satisfied: pillow>=8 in /usr/local/lib/python3.11/dist-packages (from matplotlib) (11.3.0)\n",
-      "Requirement already satisfied: pyparsing>=2.3.1 in /usr/local/lib/python3.11/dist-packages (from matplotlib) (3.2.3)\n",
-      "Requirement already satisfied: python-dateutil>=2.7 in /usr/local/lib/python3.11/dist-packages (from matplotlib) (2.9.0.post0)\n",
-      "Requirement already satisfied: six>=1.5 in /usr/local/lib/python3.11/dist-packages (from python-dateutil>=2.7->matplotlib) (1.17.0)\n"
+      "Requirement already satisfied: numpy in c:\\users\\fatih\\appdata\\roaming\\python\\python313\\site-packages (2.2.2)\n",
+      "Requirement already satisfied: matplotlib in c:\\users\\fatih\\anaconda3\\lib\\site-packages (3.10.0)\n",
+      "Requirement already satisfied: contourpy>=1.0.1 in c:\\users\\fatih\\anaconda3\\lib\\site-packages (from matplotlib) (1.3.1)\n",
+      "Requirement already satisfied: cycler>=0.10 in c:\\users\\fatih\\anaconda3\\lib\\site-packages (from matplotlib) (0.11.0)\n",
+      "Requirement already satisfied: fonttools>=4.22.0 in c:\\users\\fatih\\anaconda3\\lib\\site-packages (from matplotlib) (4.55.3)\n",
+      "Requirement already satisfied: kiwisolver>=1.3.1 in c:\\users\\fatih\\anaconda3\\lib\\site-packages (from matplotlib) (1.4.8)\n",
+      "Requirement already satisfied: packaging>=20.0 in c:\\users\\fatih\\anaconda3\\lib\\site-packages (from matplotlib) (24.2)\n",
+      "Requirement already satisfied: pillow>=8 in c:\\users\\fatih\\anaconda3\\lib\\site-packages (from matplotlib) (11.1.0)\n",
+      "Requirement already satisfied: pyparsing>=2.3.1 in c:\\users\\fatih\\anaconda3\\lib\\site-packages (from matplotlib) (3.2.0)\n",
+      "Requirement already satisfied: python-dateutil>=2.7 in c:\\users\\fatih\\appdata\\roaming\\python\\python313\\site-packages (from matplotlib) (2.9.0.post0)\n",
+      "Requirement already satisfied: six>=1.5 in c:\\users\\fatih\\appdata\\roaming\\python\\python313\\site-packages (from python-dateutil>=2.7->matplotlib) (1.17.0)\n"
      ]
     }
    ],
@@ -195,7 +195,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
@@ -209,7 +209,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.13"
+   "version": "3.13.5"
   }
  },
  "nbformat": 4,
